<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Action indicates that this will be in the action bar -->
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    
    
    <!-- Label for the location preference [CHAR LIMIT=30] CHAR LIM FOR TRANSLATION PURPOSES -->
    <string name="pref_location_label">Location</string>
    
    <!-- Key name for storing location in SharedPreferences, SO NO TRANSLATION need this way for key.  [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>
    
    <!-- DEFAULT postal code for location preference, so no translation, need this way for server [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>
    
    <!-- Label for temperature preferences [CHAR LIMIT=30] -->
    <string name="pref_temperature_label">Temperature Units</string>
    
    <!-- [CHAR LIMIT=NONE] -->
    <string name="pref_temperature_key" translatable="false">units</string>
    
    <!-- [CHAR LIMIT=NONE] -->
    <string name="pref_temperature_default" translatable="false">metric</string>
    
    <!-- Strings for ListPreference Key choices [CHAR LIMIT=NONE] -->
    <string name="pref_temperature_metric_key" translatable="false">metric</string>
    <string name="pref_temperature_imperial_key" translatable="false">imperial</string>
    
    <!-- Strings for ListPreference Value choices [CHAR LIMIT=30] -->
    <string name="pref_temperature_metric">Metric</string>
    <string name="pref_temperature_imperial">Imperial</string>
	
	<!-- For the Map action -->
	<string name="action_map">Map Location</string>
	
	<!-- For the Share option on Details -->
	<string name="action_share">Share</string>
	
	<!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
	
	<!-- Strings for formatting weather-related data -->
	<!-- Temperature format [CHAR LIMIT=5] -->
	<string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
	 
	<!-- Windspeed formats -->
	<!-- Wind in mph [CHAR LIMIT=25] -->
	<string name="format_wind_mph">
	    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
	</string>
	 
	<!-- Wind in kph [CHAR LIMIT=25] -->
	<string name="format_wind_kmh">
	    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
	</string>
	 
	<!-- Pressure format CHAR LIMIT=25] -->
	<string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
	 
	<!-- Humidity format CHAR LIMIT=25]-->
	<string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    
    <!-- Description format -->
    <string name="format_forecast"><xliff:g id="forecast">%1$s</xliff:g></string>
        
        
    



</resources>
